--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -17,8 +17,11 @@
     "com.unity.modules.physics2d": "1.0.0",
     "com.unity.modules.tilemap": "1.0.0",
     "com.unity.modules.ui": "1.0.0",
+    "com.unity.modules.uielements": "1.0.0",
     "com.unity.modules.video": "1.0.0",
-    "com.dbrizov.naughtyattributes": "2.1.4"
+    "com.dbrizov.naughtyattributes": "2.1.4",
+    "com.unity-atoms.unity-atoms-core": "4.4.3",
+    "com.unity-atoms.unity-atoms-base-atoms": "4.4.3"
   },
   "scopedRegistries": [
     {
@@ -26,7 +29,9 @@
       "url": "https://package.openupm.com",
       "scopes": [
         "com.dbrizov.naughtyattributes",
-        "com.openupm"
+        "com.openupm",
+        "com.unity-atoms.unity-atoms-base-atoms",
+        "com.unity-atoms.unity-atoms-core"
       ]
     }
   ]
