--- a/Assets/TheseusAndTheMinotaur/Scripts/Runtime/Minotaur/TheseusAndTheMinotaur.Minotaur.asmdef
+++ b/Assets/TheseusAndTheMinotaur/Scripts/Runtime/Minotaur/TheseusAndTheMinotaur.Minotaur.asmdef
@@ -2,7 +2,10 @@
     "name": "TheseusAndTheMinotaur.Minotaur",
     "rootNamespace": "TheseusAndTheMinotaur.Minotaur",
     "references": [
-        "GUID:1b599c669aace6f47ba5846a085d154d"
+        "GUID:1b599c669aace6f47ba5846a085d154d",
+        "GUID:776d03a35f1b52c4a9aed9f56d7b4229",
+        "GUID:29492541a59d04a81b47a7f225e8a22d",
+        "GUID:14165214884ae4a619bfb290f28194a7"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
