--- a/Assets/TheseusAndTheMinotaur/Scripts/Runtime/Theseus/TheseusAndTheMinotaur.Theseus.asmdef
+++ b/Assets/TheseusAndTheMinotaur/Scripts/Runtime/Theseus/TheseusAndTheMinotaur.Theseus.asmdef
@@ -2,7 +2,11 @@
     "name": "TheseusAndTheMinotaur.Theseus",
     "rootNamespace": "TheseusAndTheMinotaur.Theseus",
     "references": [
-        "GUID:1b599c669aace6f47ba5846a085d154d"
+        "GUID:1b599c669aace6f47ba5846a085d154d",
+        "GUID:29492541a59d04a81b47a7f225e8a22d",
+        "GUID:14165214884ae4a619bfb290f28194a7",
+        "GUID:776d03a35f1b52c4a9aed9f56d7b4229",
+        "GUID:75469ad4d38634e559750d17036d5f7c"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
