--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,38 +1,47 @@
 {
-  "dependencies": {
-    "com.unity.ide.rider": "3.0.12",
-    "com.unity.test-framework": "1.1.31",
-    "com.unity.textmeshpro": "3.0.6",
-    "com.unity.timeline": "1.6.4",
-    "com.unity.ugui": "1.0.0",
-    "com.unity.modules.ai": "1.0.0",
-    "com.unity.modules.animation": "1.0.0",
-    "com.unity.modules.audio": "1.0.0",
-    "com.unity.modules.director": "1.0.0",
-    "com.unity.modules.imageconversion": "1.0.0",
-    "com.unity.modules.imgui": "1.0.0",
-    "com.unity.modules.jsonserialize": "1.0.0",
-    "com.unity.modules.particlesystem": "1.0.0",
-    "com.unity.modules.physics": "1.0.0",
-    "com.unity.modules.physics2d": "1.0.0",
-    "com.unity.modules.tilemap": "1.0.0",
-    "com.unity.modules.ui": "1.0.0",
-    "com.unity.modules.uielements": "1.0.0",
-    "com.unity.modules.video": "1.0.0",
-    "com.dbrizov.naughtyattributes": "2.1.4",
-    "com.unity-atoms.unity-atoms-core": "4.4.3",
-    "com.unity-atoms.unity-atoms-base-atoms": "4.4.3"
-  },
-  "scopedRegistries": [
-    {
-      "name": "package.openupm.com",
-      "url": "https://package.openupm.com",
-      "scopes": [
-        "com.dbrizov.naughtyattributes",
-        "com.openupm",
-        "com.unity-atoms.unity-atoms-base-atoms",
-        "com.unity-atoms.unity-atoms-core"
-      ]
-    }
-  ]
+    "dependencies": {
+        "com.dbrizov.naughtyattributes": "2.1.4",
+        "com.unity-atoms.unity-atoms-base-atoms": "4.4.3",
+        "com.unity-atoms.unity-atoms-core": "4.4.3",
+        "com.unity-atoms.unity-atoms-input-system": "4.4.3",
+        "com.unity.ide.rider": "3.0.12",
+        "com.unity.inputsystem": "1.3.0",
+        "com.unity.test-framework": "1.1.31",
+        "com.unity.textmeshpro": "3.0.6",
+        "com.unity.timeline": "1.6.4",
+        "com.unity.ugui": "1.0.0",
+        "com.unity.modules.ai": "1.0.0",
+        "com.unity.modules.animation": "1.0.0",
+        "com.unity.modules.audio": "1.0.0",
+        "com.unity.modules.director": "1.0.0",
+        "com.unity.modules.imageconversion": "1.0.0",
+        "com.unity.modules.imgui": "1.0.0",
+        "com.unity.modules.jsonserialize": "1.0.0",
+        "com.unity.modules.particlesystem": "1.0.0",
+        "com.unity.modules.physics": "1.0.0",
+        "com.unity.modules.physics2d": "1.0.0",
+        "com.unity.modules.tilemap": "1.0.0",
+        "com.unity.modules.ui": "1.0.0",
+        "com.unity.modules.uielements": "1.0.0",
+        "com.unity.modules.video": "1.0.0"
+    },
+    "scopedRegistries": [
+        {
+            "name": "package.openupm.com",
+            "url": "https://package.openupm.com",
+            "scopes": [
+                "com.dbrizov.naughtyattributes",
+                "com.openupm",
+                "com.unity-atoms.unity-atoms-base-atoms",
+                "com.unity-atoms.unity-atoms-core"
+            ]
+        },
+        {
+            "name": "NPM Registry",
+            "url": "https://registry.npmjs.org",
+            "scopes": [
+                "com.unity-atoms.unity-atoms-input-system"
+            ]
+        }
+    ]
 }
